# electrical-quotation-automation

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BUILD_PLAN.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  PROJECT_STATUS.md  README.md  alembic.ini  comms.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test_integration.py
.claude/: CLAUDE.md  README.md  agent-prompting-guide.md  commands.md  development-workflow.md  project-context.md
.claude/agents/: project-setup-coordinator.md  proquote-dev-assistant.md
.claude/commands/: analyze-nec-compliance.md  debug-agent.md  generate-test-data.md  optimize-performance.md  spawn-sub-agents.md  validate-quotation.md
.github/workflows/: ci.yml
agents/: __init__.py
agents/advanced_agents/: __init__.py
agents/orchestrator/: __init__.py  supervisor.py
agents/simple_agents/: __init__.py  company_info_agent.py  footer_agent.py  header_agent.py
agents/workflow_agents/: __init__.py  project_info_agent.py
api/: __init__.py  main.py
api/dependencies/: __init__.py
api/middleware/: __init__.py
api/routes/: __init__.py  agents.py  health.py  quotations.py
infrastructure/: __init__.py
infrastructure/docker/postgres/: init.sql
scripts/: setup_project.py
services/: __init__.py
services/compliance_engine/: __init__.py
services/document_processing/: __init__.py
services/notification/: __init__.py
services/pricing_apis/: __init__.py
shared/: __init__.py
shared/data_access/: __init__.py
shared/exceptions/: __init__.py  custom_exceptions.py
shared/models/: __init__.py  quotation.py  quotation_state.py
shared/utils/: __init__.py  config.py
tests/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_company_info_agent.py  test_footer_agent.py  test_header_agent.py  test_orchestrator.py  test_project_info_agent.py
